# aftermath

./: CMakeLists.txt  README.md
benchmarks/: CMakeLists.txt  simple.cpp
include/bluegrass/error/: catch.hpp  error.hpp  error_type.hpp  preprocessor.hpp  result.hpp  utility.hpp
tests/: CMakeLists.txt  error_type_tests.cpp  result_tests.cpp
